Refactor livekit-config.yaml, frontend/tailwind.config.js, and backend/requirements.txt

--- a/frontend/src/lib/i18n/cs.json
+++ b/frontend/src/lib/i18n/cs.json
@@ -40,5 +40,6 @@
   "typeYourMessage": "Napište svou zprávu...",
   "send": "Odeslat",
   "startRecording": "Začít nahrávat",
-  "stopRecording": "Zastavit nahrávání"
+  "stopRecording": "Zastavit nahrávání",
+  "playAudio": "Přehrát audio"
 }
