--- a/frontend/src/lib/i18n/en.json
+++ b/frontend/src/lib/i18n/en.json
@@ -1,45 +1,59 @@
 {
-  "home": "Home",
-  "chat": "Chat",
-  "manageSubscription": "Manage Subscription",
-  "logout": "Logout",
-  "login": "Login",
-  "register": "Register",
-  "loginRegister": "Login/Register",
-  "authentication": "Authentication",
-  "subscriptionManagement": "Subscription Management",
-  "welcome": "Welcome to Language Tutor",
-  "pageTitle": "Language Tutor - Home",
-  "improveSkills": "Improve your language skills with our AI-powered tutor!",
-  "loggedInMessage": "You're logged in.",
-  "startChatting": "Start chatting with our AI tutor now!",
-  "toStartImproving": "to start improving your language skills.",
-  "features": "Features",
-  "feature1": "Practice conversations in multiple languages",
-  "feature2": "Get instant feedback on your grammar and vocabulary",
-  "feature3": "Learn at your own pace",
-  "feature4": "Track your progress over time",
-  "lightMode": "Light Mode",
-  "darkMode": "Dark Mode",
-  "toggleTheme": "Toggle theme",
-  "welcomeUser": "Welcome, {username}!",
-  "loginFailed": "Login failed. Please check your credentials and try again.",
-  "logoutFailed": "Logout failed. Please try again.",
-  "registrationFailed": "Registration failed. Please try again.",
-  "loggingOut": "Logging out...",
-  "processing": "Processing...",
-  "username": "Username",
-  "email": "Email",
-  "password": "Password",
-  "alreadyHaveAccount": "Already have an account? Login",
-  "needAccount": "Need an account? Register",
-  "languageTutor": "Language Tutor",
-  "welcomeToLanguageTutor": "Welcome to Language Tutor",
-  "switchToTextMode": "Switch to Text Mode",
-  "switchToVoiceMode": "Switch to Voice Mode",
-  "typeYourMessage": "Type your message...",
-  "send": "Send",
-  "startRecording": "Start Recording",
-  "stopRecording": "Stop Recording",
-  "playAudio": "Play Audio"
+    "auth": {
+        "login": {
+            "title": "Login",
+            "email": "Email:",
+            "password": "Password:",
+            "submit": "Login",
+            "emailPlaceholder": "Enter your email",
+            "passwordPlaceholder": "Enter your password",
+            "error": "An error occurred during login",
+            "noAccount": "Don't have an account?",
+            "registerLink": "Register here"
+        },
+        "register": {
+            "title": "Register",
+            "username": "Username:",
+            "email": "Email:",
+            "password": "Password:",
+            "confirmPassword": "Confirm Password:",
+            "submit": "Register",
+            "usernamePlaceholder": "Enter your username",
+            "emailPlaceholder": "Enter your email",
+            "passwordPlaceholder": "Enter your password",
+            "confirmPasswordPlaceholder": "Confirm your password",
+            "error": "An error occurred during registration",
+            "passwordMismatch": "Passwords do not match",
+            "haveAccount": "Already have an account?",
+            "loginLink": "Login here"
+        }
+    },
+    "chat": {
+        "title": "Language Tutor Chat",
+        "messagePlaceholder": "Type your message...",
+        "startRecording": "Start Recording",
+        "stopRecording": "Stop Recording",
+        "send": "Send",
+        "playAudio": "Play Audio",
+        "pauseAudio": "Pause Audio",
+        "errors": {
+            "microphoneAccess": "Could not access microphone",
+            "sendMessage": "Failed to send message",
+            "sendAudio": "Failed to send audio"
+        },
+        "notifications": {
+            "thinking": "Tutor is thinking...",
+            "recording": "Recording...",
+            "processing": "Processing audio..."
+        }
+    },
+    "common": {
+        "loading": "Loading...",
+        "error": "An error occurred",
+        "retry": "Retry",
+        "cancel": "Cancel",
+        "save": "Save",
+        "delete": "Delete",
+        "edit": "Edit"
+    }
 }
