Refactor Tailwind CSS configuration and remove unused plugins

--- a/frontend/src/lib/i18n/en.json
+++ b/frontend/src/lib/i18n/en.json
@@ -47,6 +47,12 @@
             "processing": "Processing audio..."
         }
     },
+    "home": {
+        "title": "Welcome to Language Tutor",
+        "description": "Improve your language skills with our AI-powered tutor. Practice conversations, learn grammar, and enhance your vocabulary in a natural way.",
+        "getStarted": "Get Started",
+        "continueChat": "Continue Learning"
+    },
     "common": {
         "loading": "Loading...",
         "error": "An error occurred",
