--- a/frontend/src/lib/i18n/cs.json
+++ b/frontend/src/lib/i18n/cs.json
@@ -1,45 +1,65 @@
 {
-  "home": "Domů",
-  "chat": "Chat",
-  "manageSubscription": "Spravovat předplatné",
-  "logout": "Odhlásit se",
-  "login": "Přihlásit se",
-  "register": "Registrovat se",
-  "loginRegister": "Přihlášení/Registrace",
-  "authentication": "Ověření",
-  "subscriptionManagement": "Správa předplatného",
-  "welcome": "Vítejte v Jazykovém tutorovi",
-  "pageTitle": "Jazykový tutor - Domů",
-  "improveSkills": "Zlepšete své jazykové dovednosti s naším AI tutorem!",
-  "loggedInMessage": "Jste přihlášeni.",
-  "startChatting": "Začněte chatovat s naším AI tutorem!",
-  "toStartImproving": "pro zlepšení vašich jazykových dovedností.",
-  "features": "Funkce",
-  "feature1": "Procvičujte konverzace v několika jazycích",
-  "feature2": "Získejte okamžitou zpětnou vazbu na vaši gramatiku a slovní zásobu",
-  "feature3": "Učte se vlastním tempem",
-  "feature4": "Sledujte svůj pokrok v průběhu času",
-  "lightMode": "Světlý režim",
-  "darkMode": "Tmavý režim",
-  "toggleTheme": "Přepnout téma",
-  "welcomeUser": "Vítejte, {username}!",
-  "loginFailed": "Přihlášení se nezdařilo. Zkontrolujte své údaje a zkuste to znovu.",
-  "logoutFailed": "Odhlášení se nezdařilo. Prosím zkuste to znovu.",
-  "registrationFailed": "Registrace se nezdařila. Prosím zkuste to znovu.",
-  "loggingOut": "Odhlašování...",
-  "processing": "Zpracování...",
-  "username": "Uživatelské jméno",
-  "email": "E-mail",
-  "password": "Heslo",
-  "alreadyHaveAccount": "Již máte účet? Přihlaste se",
-  "needAccount": "Potřebujete účet? Zaregistrujte se",
-  "languageTutor": "Jazykový tutor",
-  "welcomeToLanguageTutor": "Vítejte v Jazykovém tutorovi",
-  "switchToTextMode": "Přepnout na textový režim",
-  "switchToVoiceMode": "Přepnout na hlasový režim",
-  "typeYourMessage": "Napište svou zprávu...",
-  "send": "Odeslat",
-  "startRecording": "Začít nahrávat",
-  "stopRecording": "Zastavit nahrávání",
-  "playAudio": "Přehrát audio"
+    "auth": {
+        "login": {
+            "title": "Přihlásit se",
+            "email": "E-mail:",
+            "password": "Heslo:",
+            "submit": "Přihlásit se",
+            "emailPlaceholder": "Zadejte svůj e-mail",
+            "passwordPlaceholder": "Zadejte své heslo",
+            "error": "Při přihlašování došlo k chybě",
+            "noAccount": "Nemáte účet?",
+            "registerLink": "Zaregistrujte se zde"
+        },
+        "register": {
+            "title": "Registrovat se",
+            "username": "Uživatelské jméno:",
+            "email": "E-mail:",
+            "password": "Heslo:",
+            "confirmPassword": "Potvrdit heslo:",
+            "submit": "Registrovat",
+            "usernamePlaceholder": "Zadejte své uživatelské jméno",
+            "emailPlaceholder": "Zadejte svůj e-mail",
+            "passwordPlaceholder": "Zadejte své heslo",
+            "confirmPasswordPlaceholder": "Potvrďte své heslo",
+            "error": "Při registraci došlo k chybě",
+            "passwordMismatch": "Hesla se neshodují",
+            "haveAccount": "Již máte účet?",
+            "loginLink": "Přihlaste se zde"
+        }
+    },
+    "chat": {
+        "title": "Jazykový tutor - Chat",
+        "messagePlaceholder": "Napište svou zprávu...",
+        "startRecording": "Začít nahrávat",
+        "stopRecording": "Zastavit nahrávání",
+        "send": "Odeslat",
+        "playAudio": "Přehrát audio",
+        "pauseAudio": "Pozastavit audio",
+        "errors": {
+            "microphoneAccess": "Nelze získat přístup k mikrofonu",
+            "sendMessage": "Nepodařilo se odeslat zprávu",
+            "sendAudio": "Nepodařilo se odeslat audio"
+        },
+        "notifications": {
+            "thinking": "Tutor přemýšlí...",
+            "recording": "Nahrávání...",
+            "processing": "Zpracování audia..."
+        }
+    },
+    "home": {
+        "title": "Vítejte v Jazykovém tutorovi",
+        "description": "Zlepšete své jazykové dovednosti s naším AI tutorem. Procvičujte konverzace, učte se gramatiku a rozšiřujte svou slovní zásobu přirozeným způsobem.",
+        "getStarted": "Začít",
+        "continueChat": "Pokračovat v učení"
+    },
+    "common": {
+        "loading": "Načítání...",
+        "error": "Došlo k chybě",
+        "retry": "Zkusit znovu",
+        "cancel": "Zrušit",
+        "save": "Uložit",
+        "delete": "Smazat",
+        "edit": "Upravit"
+    }
 }
